--- a/src/express/templates/index.pug
+++ b/src/express/templates/index.pug
@@ -2,6 +2,7 @@ extends layout.pug
 
 block content
   main.page-content
+    include partials/categories.pug
     section.tickets-list
       h2.visually-hidden Самые новые предложения
       .tickets-list__wrapper
